--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,17 +1,45 @@
 ---
-import Layout from '../layouts/Layout.astro';
+const pageTitle = "About Me";
+const identity = {
+  firstName: "Maya Chungbin",
+  country: "Seattle, WA",
+  occupation: "Creative Director & Illustrator",
+  hobbies: ["working out", "cooking"],
+};
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const happy = true;
+const finished = false;
+const goal = 3;
+
+const skills = ["Procreate", "Photoshop", "Illustrator", "Figma", "SVG creation"];
 ---
-
-<Layout>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>{pageTitle}</title>
+  </head>
+  <body>
     <a href="/">Home</a>
     <a href="/about/">About</a>
-    <h1>About Me</h1>
-    <h2>... and my new Astro site!</h2>
+    <h1>{pageTitle}</h1>
 
-    <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
+    <p>Here are a few facts about me:</p>
+<ul>
+  <li>My name is {identity.firstName}.</li>
+  <li>I live in {identity.country} and I work as a {identity.occupation}.</li>
+  {identity.hobbies.length >= 2 &&
+    <li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
+  }
+</ul>
+<p>My skills are:</p>
+<ul>
+  {skills.map((skill) => <li>{skill}</li>)}
+</ul>
+{happy && <p>I am happy to be learning Astro!</p>}
 
-    <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
-</Layout>
+{finished && <p>I finished this tutorial!</p>}
+
+{goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
+  </body>
+</html>
