--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,8 @@
+---
+import "../styles/global.css";
+---
+
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -8,7 +13,11 @@
 		<title>Astro Basics</title>
 	</head>
 	<body>
-		<slot />
+		<div class="RootLayout">
+			<div class="RootContainer">
+				<slot />
+			</div>
+		</div>
 	</body>
 </html>
 
@@ -18,5 +27,17 @@
 		margin: 0;
 		width: 100%;
 		height: 100%;
+	}
+	.RootLayout {
+		min-height: 100vh;
+	}
+	.RootContainer {
+		padding: 1rem;
+		width: 100%;
+		margin-left: auto;
+		margin-right: auto;
+		display: flex;
+		flex-direction: column;
+		gap: 1rem
 	}
 </style>
