Replaced the coins image...

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import abstract from '../assets/images/abstract.png';
 import adventureCard from '../assets/images/adventure-card.png';
 import blume from '../assets/images/blume.png';
 import cherryPhone from '../assets/images/cherry-phone.png';
-import coinsUpImage from '../assets/images/coins-up.png';
+import coinsAbstract from '../assets/images/coins-abstract.png';
 import computerRunning from '../assets/images/computer-running.png';
 import hair from '../assets/images/hair.png';
 import handsCoins from '../assets/images/hands-coins.png';
@@ -39,7 +39,7 @@ const images: ImageItem[] = [
 	{ id: "13", src: meditateCard, alt: "meditate card", rowSpan: 2, colSpan: 2 },
 	{ id: "14", src: cherryPhone, alt: "cherry phone" },
 	{ id: "15", src: toothCrown, alt: "tooth crown" },
-	{ id: "16", src: coinsUpImage, alt: "coins up" },
+	{ id: "16", src: coinsAbstract, alt: "coins abstract" },
 	{ id: "17", src: abstract, alt: "abstract art" },
 	{ id: "18", src: adventureCard, alt: "adventure card", rowSpan: 2, colSpan: 2 },
 	{ id: "19", src: handsTogether, alt: "hands together" },
