--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,6 +11,9 @@ import "../styles/global.css";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
+		<style>
+			@import url('https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300;400;900&display=swap');
+		</style>
 	</head>
 	<body>
 		<div class="RootLayout">
@@ -27,6 +30,7 @@ import "../styles/global.css";
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		overflow-x: clip;
 	}
 	.RootLayout {
 		min-height: 100vh;
