--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,14 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --font-family-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-family-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-family-mono: ui-monospace, SFMono-Regular, "SF Mono", Consolas, "Liberation Mono", Menlo, monospace;
+  --font-family-londrina: "Londrina Solid", ui-sans-serif, system-ui, sans-serif;
+  --font-sans: var(--font-family-sans);
+  --font-serif: var(--font-family-serif);
+  --font-mono: var(--font-family-mono);
+  --font-londrina: var(--font-family-londrina);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -44,8 +52,8 @@
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(98.59% 0.007 115.70);
-  --foreground: oklch(0.145 0 0);
+  --background: oklch(99.14% 0.007 115.70);
+  --foreground: oklch(25.70% 0.014 325.98);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
