--- a/src/components/ImageGrid.astro
+++ b/src/components/ImageGrid.astro
@@ -15,7 +15,7 @@ const { images } = Astro.props as { images: ImageItem[] };
 ---
 
 <div
-  class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-2 sm:gap-6"
+  class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3 sm:gap-4"
   style="grid-template-rows: repeat(auto-fill, minmax(200px, auto));"
 >
   {images.map((img) => (
