--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,7 +11,7 @@ import aboutHero from '../assets/images/maya-about.png';
     <div class="font-mono tracking-tighter relative">
         <a href="/" class="font-mono tracking-tighter absolute top-0 right-0 hover:text-gray-500 transition-colors duration-300">Home</a>
         <div class="flex flex-col gap-4 max-w-full md:max-w-[672px]">
-                         <Image class="w-[300px] sm:w-[420px] md:w-[560px] lg:w-[640px] h-auto mb-4" src={aboutText} alt="maya hero"/>
+            <Image class="w-[240px]lg:w-[640px] md:w-[420px] sm:w-[360px] h-auto mb-4" src={aboutText} alt="maya hero"/>
             <p class="text-sm md:text-base">Hi! Thank you for taking the time to look at my work.</p>
             <p class="text-sm md:text-base">I'm an illustrator and creative director, currently exploring the depths of both roles. I began my career in 2019 as a Fiverr seller, where I worked with over 1,200 clients and became a Top Rated seller for my illustration and design work under the screen name Salty Still. While that era has ended, I'll always be grateful for it and everything it taught me.</p>
             <p class="text-sm md:text-base">In 2022, I returned to illustration, getting back to my roots— this time on my own as a freelancer.</p>
